<resources>
    <string name="app_name">TipCalculater</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_label">Tip:</string>
    <string name="percent">15%</string>
    <string name="total_label">Total</string>
    <string name="percent_label">Percent</string>
    <string name="tip">$0.00</string>
    <string name="radiobutton1">None</string>
    <string name="radiobutton2">Tip</string>
    <string name="radiobutton3">Total</string>
</resources>
