<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <!--RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/billAmountLabel"
            android:text="@string/bill_amount"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/billAmountEditText"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/billAmountLabel"
            android:textSize="20sp"
            android:layout_alignBaseline="@id/billAmountLabel"
            android:ems="8"
            android:inputType="numberDecimal" >

            <requestFocus />

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percentLabel"
            android:text="@string/percent_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignLeft="@id/billAmountLabel"
            android:layout_below="@id/billAmountLabel"
            android:padding="10dp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/percentTextView"
            android:text="@string/percent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/percentLabel"
            android:layout_toRightOf="@id/percentLabel"
            android:padding="5dp" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/percentSeekBar"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/percentLabel"
            android:layout_toRightOf="@id/percentTextView"
            android:max="30"
            android:progress="15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipLabel"
            android:text="@string/tip_label"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/percentLabel"
            android:layout_below="@id/percentLabel"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipTextView"
            android:text="@string/tip"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/tipLabel"
            android:layout_toRightOf="@id/tipLabel"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalLabel"
            android:text="@string/total_label"
            android:textSize="20sp"
            android:textStyle="bold"

            android:layout_below="@id/tipLabel"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/totalTextView"
            android:text="$0.00"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignBaseline="@+id/totalLabel"
            android:layout_toRightOf="@id/totalLabel"
            android:padding="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/separatorLine"
            android:layout_alignLeft="@id/totalLabel"
            android:layout_below="@id/totalLabel"
            android:background="@android:color/black"
            android:padding="5sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/roundingLabel"
            android:text="Rounding"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignLeft="@id/separatorLine"
            android:layout_below="@id/separatorLine"
            android:padding="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:id="@+id/roundingRadioGroup"
        android:layout_alignEnd="@+id/billAmountEditText"
        android:layout_alignTop="@+id/separatorLine"
        android:layout_toEndOf="@+id/billAmountLabel">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton1"
            android:id="@+id/noneRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton2"
            android:id="@+id/tipRadioButton"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton3"
            android:id="@+id/totalRadioButton"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/splitLabel"
        android:text="Split Bill?"
        android:textSize="20sp"
        android:textStyle="bold"

        android:layout_below="@id/roundingRadioGroup"
        android:padding="10dp" />
    <Spinner android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/splitSpinner"
        >

    </Spinner>

</RelativeLayout>


<!--/ScrollView>
